--- a/src/pages/Register/styles.css
+++ b/src/pages/Register/styles.css
@@ -2,7 +2,7 @@
     background-image: url('../../images/background.svg');
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
+    height: 100%;
     width: 100vw;
     display: flex;
     flex-direction: column;
