--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -15,6 +15,20 @@
     --team-background: var(--gradient-home), url('../../images/background.svg');
 }
 
+.plus,
+.minus {
+    text-align: right;
+    font-weight: 500;
+}
+
+.plus {
+    color: hsl(207, 87%, 59%);
+}
+
+.minus {
+    color: hsla(32, 96%, 52%, 1);
+}
+
 .conteiner_main {
     width: 100%;
     min-height: 100vh;
@@ -120,11 +134,6 @@
     flex-direction: column;
     height: 350px;
     z-index: 1;
-    overflow: hidden;
-}
-
-.table__list:hover {
-    overflow-y: scroll;
 }
 
 .group_icon {
@@ -257,7 +266,7 @@
     display: flex;
     align-items: center;
     text-align: right;
-    color: #3A9FF1;
+    color: hsl(207, 87%, 59%);
     margin-left: 45px;
 }
 
